fix mobile for services section

--- a/index.html
+++ b/index.html
@@ -317,12 +317,16 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-md-6">
+                            <div class="wrap-services">
                                 <h3>Cosmetic Dentistry</h3>
                                 <p>Cosmetic dentistry is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile can increase self confidence and overall life satisfaction. Cosmetic dentistry can encompass things such as tooth-colored fillings, dental implants, or crowns. We have many options, so please call us for a free cosmetic consultation.</p>
+                            </div>
                         </div>
                         <div class="col-md-6">
+                            <div class="wrap-services">
                                 <h3>Implant Dentistry</h3>
-                                <p>Dental implants are a great option for replacing missing teeth, improving chewing ability, eliminating bridges, and replacing dentures. Several implants may provide a base for a series of artificial teeth known as a fixed bridge. Implants can even be used to secure a full set of removable dentures for people who have no remaining natural teeth.</p>
+                                    <p>Dental implants are a great option for replacing missing teeth, improving chewing ability, eliminating bridges, and replacing dentures. Several implants may provide a base for a series of artificial teeth known as a fixed bridge. Implants can even be used to secure a full set of removable dentures for people who have no remaining natural teeth.</p>
+                                </div>
                             </div>
                     </div>
                 </div>
@@ -514,8 +518,7 @@
 
                 <!-- Google Map
                 ============================================= -->
-                <section class="gmap hidden-xs hidden-xxs"><img src="images/map-full.png" alt="full-map">
-                </section>
+
             </section>
 
 
