--- a/index.html
+++ b/index.html
@@ -159,13 +159,15 @@
                         <div class="col-sm-6 tright">
                             <h6>New Patient Hotline</h6>
                             <div class="new-hotline"><a href="tel:+18884187563">(888) 418&#8209;7563</a></div>
-                            <p class="old-hotline">Existing patients: <a
+                            <p class="old-hotline hidden-xs hidden-xxs">Existing patients: <a
                                     href="tel:+7704104999">(770) 410&#8209;4999</a></p>
                         </div>
                         <div class="col-sm-6 tleft">
                             <a class="button" data-toggle="modal" data-target="#contact-modal">REQUEST
                                 APPOINTMENT</a>
                         </div>
+                        <p class="old-hotline hidden-lg hidden-md hidden-sm">Existing Patients<span class="hidden-lg hidden-md hidden-sm"> Call</span>:<br class="hidden-lg hidden-md hidden-sm"><a
+                                href="tel:+7704104999">(770) 410&#8209;4999</a></p>
                     </div>
                 </div>
             </section>
