finish styling mobile design for meet the doctors

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 </div>
             </section>
 
-            <section id="meet-the-doctor">
+            <section id="meet-the-doctor" class="hidden-sm hidden-xs hidden-xxs">
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-4">
@@ -193,6 +193,31 @@
 
                                 <p>Dr. Zandstra is a member of the American Dental Association, Georgia Dental Association, American Academy of Dental Sleep Medicine, American Association of Women Dentists, American College of Prosthodontics and Alpha Omega&nbsp;International.</p>
 
+                        </div>
+                    </div>
+                </div>
+            </section>
+
+            <section id="meet-the-doctor-mobile">
+                <div class="container">
+                    <h2>Dr. Estelle Zandstra</h2>
+                    <h4>General and Cosmetic Dentist</h4>
+                    <div class="row">
+                        <div class="col-sm-4">
+                            <img src="images/zandstra-mobile-bio.jpg" alt="Zandstra mobile">
+                        </div>
+                        <div class="col-sm-8">
+                            <p>
+                                By combining advanced dental technology and training with a gentle, friendly style, Dr. Estelle Zandstra and her team will make you more comfortable than you ever thought possible.</p>
+
+                                <p>Dr. Zandstra is a graduate of the Medical College of Virginia School of Dentistry and has completed a University of Florida Residency in Prosthodontics—a distinction earned by fewer than 2% of all dentists. In addition, she has extensive experience and post-doctoral studies in cosmetic dentistry and full mouth reconstruction. So, whether you need advanced care or a routine cleaning, you can be assured that all your dentistry will be performed with the utmost precision and care.</p>
+
+                               <p> Dr. Zandstra and her husband, Mike, live right here in Alpharetta. They have been married 10 years and have 2 children.
+
+
+
+
+                            </p>
                         </div>
                     </div>
                 </div>
