put in right background images for mobile on slider

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
         <div class="swiper-container swiper-parent">
             <div class="swiper-wrapper">
-                <div class="swiper-slide" id="slide-1" style="background-image: url('images/slide3.jpg');">
+                <div class="swiper-slide" id="slide-1">
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-right">
                             <h2 data-caption-animate="fadeInUp" data-caption-delay="200">The Beauty of a</h2>
@@ -107,7 +107,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" id="slide-2" style="background-image:url('images/slide2.jpg');">
+                <div class="swiper-slide" id="slide-2"">
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-right">
                             <div data-caption-animate="fadeInUp" data-caption-delay="200" class="star-set center">
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" id="slide-3" style="background-image: url('images/slide1.jpg');">
+                <div class="swiper-slide" id="slide-3"">
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-left">
                             <div data-caption-animate="fadeInUp" data-caption-delay="200" class="star-set center">
