fix specials section on mobile

--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 </div>
             </section>
 
-            <section id="meet-the-doctor-mobile">
+            <section id="meet-the-doctor-mobile" class="hidden-lg hidden-md">
                 <div class="container">
                     <h2>Dr. Estelle Zandstra</h2>
                     <h4>General and Cosmetic Dentist</h4>
@@ -229,7 +229,7 @@
                 <div class="container">
                     <div class="center specials-top">
                         <h3>Limited Time Special Offers</h3>
-                        <h5>Offer Ends by December 20, 2016</h5>
+                        <h5>Offer Ends by December&nbsp;20,&nbsp;2016</h5>
                     </div>
                 </div>
             </section>
