finish styling for medium width

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                         <div class="col-sm-4">
 
                         </div>
-                        <div class="col-sm-8">
+                        <div class="col-sm-8 col-md-push-2">
                             <h3>Meet the Doctor</h3>
                             <h2>Dr. Estelle Zandstra</h2>
                             <h4>General and Cosmetic Dentist</h4>
