finish styling xxs slider

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                                 <i class="icon-star3"></i>
                             </div>
                                 <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">Better than ever!</h2>
-                                <p data-caption-animate="fadeInUp" data-caption-delay="200" class="center">“My smile is back, better than ever! <br>Dr. Zandstra immediately put me at ease. Thank you for giving me such a beautiful&nbsp;smile!” – Pam M.</p>
+                                <p data-caption-animate="fadeInUp" data-caption-delay="200" class="center">“My smile is back, better than ever! <br class="hidden-xs hidden-xxs"><span class="hidden-lg hidden-sm hidden-md"> </span>Dr. Zandstra immediately put me at ease. Thank you for giving me such a beautiful&nbsp;smile!” – Pam M.</p>
                                 <div class="center btn-wrap" data-caption-animate="fadeInUp" data-caption-delay="200"><a class="button">READ OUR REVIEWS</a></div>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                                 <i class="icon-star3"></i>
                             </div>
                             <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">5-Star Reviews</h2>
-                            <h4 class="center" data-caption-animate="fadeInUp" data-caption-delay="200">Read what our patients have to<br>say about Dr. Zandstra!</h4>
+                            <h4 class="center" data-caption-animate="fadeInUp" data-caption-delay="200">Read what our patients have to<br class="hidden-xs hidden-xxs"><span class="hidden-md hidden-lg hidden-sm"> </span>say about Dr. Zandstra!</h4>
                             <div class="center"><a class="button" data-caption-animate="fadeInUp" data-caption-delay="200">READ OUR REVIEWS</a></div>
                         </div>
                     </div>
