add in smooth scroll to navbar

--- a/index.html
+++ b/index.html
@@ -41,43 +41,43 @@
                         ============================================= -->
             <nav id="primary-menu">
                 <ul class="navbar">
-                    <li class="current"><a href="#" data-scrollto="#fall-specials" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#specials-top" data-offset="70">
                         <div class="">New Patient Offers</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#no-insurance" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#reviews" data-offset="60">
                         <div class="">Reviews</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#patient-reviews" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#meet-the-doctor" data-offset="60">
                         <div class="">Team</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#meet-your-dental-team" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="60">
                         <div>Tour</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#services-top" data-offset="85">
                         <div>Services</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="60">
+                    <li class="current"><a href="#" data-scrollto="#contact" data-offset="80">
                         <div>Location</div>
                     </a></li>
                 </ul>
 
                 <ul class="mobile-primary-menu navbar">
-                    <li class="current"><a href="#" data-scrollto="#fall-specials" data-offset="0">
+                    <li class="current"><a href="#" data-scrollto="#specials-top" data-offset="00">
                         <div class="">New Patient Offers</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#no-insurance" data-offset="0">
+                    <li class="current"><a href="#" data-scrollto="#reviews" data-offset="0">
                         <div class="">Reviews</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#patient-reviews" data-offset="0">
+                    <li class="current"><a href="#" data-scrollto="#meet-the-doctor-mobile" data-offset="0">
                         <div class="">Team</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#meet-your-dental-team" data-offset="0">
+                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="0">
                         <div>Tour</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="0">
+                    <li class="current"><a href="#" data-scrollto="#services-top" data-offset="0">
                         <div>Services</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="0">
+                    <li class="current"><a href="#" data-scrollto="#contact" data-offset="0">
                         <div>Location</div>
                     </a></li>
                 </ul>
@@ -338,7 +338,7 @@
                 <div class="container">
                     <div class="center">
                         <h3>Our Services</h3>
-                        <p>By actively preventing disease and decay through regular home care, professional dental cleanings and regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</p>
+                        <p>By actively preventing disease and decay through regular home care, professional dental cleanings and regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#" data-target="#contact-modal" data-toggle="modal">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</p>
                     </div>
                 </div>
             </section>
