add smoothscroll to slider

--- a/index.html
+++ b/index.html
@@ -56,13 +56,13 @@
                     <li class="current"><a href="#" data-scrollto="#services-top" data-offset="85">
                         <div>Services</div>
                     </a></li>
-                    <li class="current"><a href="#" data-scrollto="#contact" data-offset="80">
+                    <li class="current"><a href="#" data-scrollto="#office-tour" data-offset="60">
                         <div>Location</div>
                     </a></li>
                 </ul>
 
                 <ul class="mobile-primary-menu navbar">
-                    <li class="current"><a href="#" data-scrollto="#specials-top" data-offset="00">
+                    <li class="current"><a href="#" data-scrollto="#specials-top" data-offset="0">
                         <div class="">New Patient Offers</div>
                     </a></li>
                     <li class="current"><a href="#" data-scrollto="#reviews" data-offset="0">
@@ -103,11 +103,15 @@
                             <h2 data-caption-animate="fadeInUp" data-caption-delay="200">The Beauty of a</h2>
                             <h1 data-caption-animate="fadeInUp" data-caption-delay="200">Healthy Smile</h1>
                             <h4 class="center" data-caption-animate="fadeInUp" data-caption-delay="200">Now Welcoming New Patients</h4>
-                            <div class="center btn-wrap" data-caption-animate="fadeInUp" data-caption-delay="200"><a class="button">NEW PATIENT OFFERS</a></div>
+                            <div class="center btn-wrap" data-caption-animate="fadeInUp" data-caption-delay="200"><a class="button" href="#" data-scrollto="#specials-top" data-offset="70">NEW PATIENT OFFERS</a>
+
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" id="slide-2"">
+                <div class="swiper-slide" id="slide-2">
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-right">
                             <div data-caption-animate="fadeInUp" data-caption-delay="200" class="star-set center">
@@ -119,11 +123,11 @@
                             </div>
                                 <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">Better than ever!</h2>
                                 <p data-caption-animate="fadeInUp" data-caption-delay="200" class="center">“My smile is back, better than ever! <br class="hidden-xs hidden-xxs"><span class="hidden-lg hidden-sm hidden-md"> </span>Dr. Zandstra immediately put me at ease. Thank you for giving me such a beautiful&nbsp;smile!” – Pam M.</p>
-                                <div class="center btn-wrap" data-caption-animate="fadeInUp" data-caption-delay="200"><a class="button">READ OUR REVIEWS</a></div>
+                                <div class="center btn-wrap" data-caption-animate="fadeInUp" data-caption-delay="200"><a class="button" href="#" data-scrollto="#reviews" data-offset="60">READ OUR REVIEWS</a></div>
                         </div>
                     </div>
                 </div>
-                <div class="swiper-slide" id="slide-3"">
+                <div class="swiper-slide" id="slide-3">
                     <div class="container clearfix">
                         <div class="slider-caption slider-caption-left">
                             <div data-caption-animate="fadeInUp" data-caption-delay="200" class="star-set center">
@@ -135,7 +139,7 @@
                             </div>
                             <h2 data-caption-animate="fadeInUp" data-caption-delay="200" class="center">5-Star Reviews</h2>
                             <h4 class="center" data-caption-animate="fadeInUp" data-caption-delay="200">Read what our patients have to<br class="hidden-xs hidden-xxs"><span class="hidden-md hidden-lg hidden-sm"> </span>say about Dr. Zandstra!</h4>
-                            <div class="center"><a class="button" data-caption-animate="fadeInUp" data-caption-delay="200">READ OUR REVIEWS</a></div>
+                            <div class="center"><a class="button" data-caption-animate="fadeInUp" data-caption-delay="200" href="#" data-offset="60" data-scrollto="#reviews">READ OUR REVIEWS</a></div>
                         </div>
                     </div>
                 </div>
@@ -296,7 +300,6 @@
                         <p class="old-hotline hidden-lg hidden-md hidden-sm">Existing Patients<span class="hidden-lg hidden-md hidden-sm"> Call</span>:<br class="hidden-lg hidden-md hidden-sm"><a
                                 href="tel:+7704104999">(770) 410&#8209;4999</a></p>
                     </div>
-                    </div>
                 </div>
             </section>
 
@@ -338,7 +341,7 @@
                 <div class="container">
                     <div class="center">
                         <h3>Our Services</h3>
-                        <p>By actively preventing disease and decay through regular home care, professional dental cleanings and regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#" data-target="#contact-modal" data-toggle="modal">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</p>
+                        <p>By actively preventing disease and decay through regular home care, professional dental cleanings and regular exams, we’ll partner with you to maintain your healthy, beautiful smile. Prevention is always better than treatment, so if it’s been a while since you’ve seen a dentist, please give us a call or <a href="#" data-toggle="modal" data-target="#contact-modal">click&nbsp;to&nbsp;request&nbsp;an&nbsp;appointment</a>.</p>
                     </div>
                 </div>
             </section>
