add in google fonts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="description" content="Dr. Estelle Zandstra is one of Alpharetta’s most loved dentists. Join us for a $49 Limited Time New Patient Special. Read our patient reviews!" />
     <meta name="keywords" content="alpharetta georgia dentist, alpharetta georgia alpharetta georgia general dentist, alpharetta georgia cosmetic dentist, alpharetta georgia dental, alpharetta dentist, alpharetta general dentist, alpharetta cosmetic dentist, alpharetta nc dental, alpharetta dental, alpharetta georgia family dentist, alpharetta family dentist, alpharetta crowns, alpharetta georgia crowns, alpharetta georgia root canals, alpharetta root canals, alpharetta georgia veneers, alpharetta veneers, alpharetta georgia tooth whitening, alpharetta tooth whitening, alpharetta georgia smile whitening, alpharetta smile whitening" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Open+Sans:300,400,700|Roboto+Condensed:300,400" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet">
+
     <!--build:css css/styles.min.css-->
     <link href="css/main.css" rel="stylesheet">
     <!--endbuild-->
