--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
 
-    <section id="slider" class="slider-parallax full-screen with-header swiper_wrapper clearfix">
+    <section id="slider" class="slider-parallax full-screen with-header swiper_wrapper clearfix" data-loop="true" data-speed="1000" data-autoplay="7000">
 
     <div class="slider-parallax-inner">
 
@@ -368,7 +368,7 @@
             </section>
 
             <section id="services-carousel">
-                    <div id="related-portfolio" class="owl-carousel owl-carousel-full portfolio-carousel portfolio-notitle portfolio-nomargin carousel-widget" data-margin="0" data-loop="true" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="4">
+                    <div id="related-portfolio" class="owl-carousel owl-carousel-full portfolio-carousel portfolio-notitle portfolio-nomargin carousel-widget" data-margin="0" data-loop="true" data-nav="true" data-pagi="false" data-items-xxs="1" data-items-xs="2" data-items-sm="3" data-items-md="4" data-items-lg="4" data-speed="1000" data-autoplay="7000">
 
                         <div class="oc-item" data-toggle="modal" data-target="#veneers">
                             <div class="iportfolio">
