add in images pngs back

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <!-- Logo
         ============================================= -->
             <div id="logo">
-                <a href="#" data-scrollto="#header" class="standard-logo"><img src="images/logo-top.png" alt="Zandstra Logo"></a>
-                <a href="#" data-scrollto="#header" class="retina-logo"><img src="images/logo-top.png"
+                <a href="#" data-scrollto="#header" class="standard-logo"><img src="images/logo-header.png" alt="Zandstra Logo"></a>
+                <a href="#" data-scrollto="#header" class="retina-logo"><img src="images/logo-header.png"
                                                                              alt="Zandstra Logo"></a>
             </div><!-- #logo end -->
 
@@ -512,7 +512,7 @@
                         <div id="contact-form-overlay-mini" class="clearfix">
                             <div class="center">
                                 <a href="#" data-scrollto="#header" data-offset="0">
-                                    <img src="images/logo-bottom.png" alt="Logo">
+                                    <img src="images/logo-footer.png" alt="Logo">
                                 </a>
                                 <p class="p-1">3005 Royal Blvd South, Suite 220</p>
                                 <p class="p-2">Alpharetta, GA 30022</p>
@@ -575,7 +575,7 @@
 
         <!-- Copyrights
        ============================================= -->
-        <section class="gmap-2 hidden-lg hidden-md hidden-sm"><a href="https://goo.gl/maps/ntoVJKYos4F2" target="_blank"><img src="images/map-img.jpg" alt="Map Image"></a></section>
+        <section class="gmap-2 hidden-lg hidden-md hidden-sm"><a href="https://goo.gl/maps/ntoVJKYos4F2" target="_blank"><img src="images/google-map-full.png" alt="Map Image"></a></section>
 
         <div id="sub-copyright">
             <div class="center">
